--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,20 @@
 .body {
-    background-color: #f8f2e9;
+    background-color:
+        #f8f2e9;
+}
+
+.boss {
+    position: fixed;
+
 }
 
 .navigation {
     background-color: #031640;
     height: 165px;
+    width: 1432px;
     display: flex;
 }
+
 
 .logo {
     width: 100px;
@@ -21,11 +29,13 @@
     margin-left: 2%;
     margin-top: 1%;
     height: 10%;
+    font-weight: lighter;
 }
 
 .nav {
     background-color: #031640;
     display: flex;
+
 }
 
 .list {
@@ -66,4 +76,33 @@
 a:hover {
     background-color: #2a65e46d;
     border-radius: 5px;
+}
+
+.a {
+    background-image: url(/images/background.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-color: rgb(241, 247, 247);
+    width: 1380px;
+    height: 480px;
+    padding-left: 50px;
+}
+
+.b {
+    color: #bbb9b7;
+    font-size: 40px;
+    margin-top: 1%;
+    padding-top: 29%;
+    font-family: sans-serif;
+    font-weight: lighter;
+}
+
+.c {
+    color: #bbb9b7;
+    font-size: 25px;
+    font-family: sans-serif;
+    font-weight: lighter;
+    line-height: 0%;
+    margin-top: -1%;
+    margin-left: 3%;
 }
