--- a/Style4/sstyle.css
+++ b/Style4/sstyle.css
@@ -29,7 +29,6 @@
     border-color: rgb(0, 0, 0);
     padding-right: 10px;
     height: 35px;
-    padding-top: ;
 }
 
 .nav3:hover {
@@ -128,7 +127,7 @@
 
 .bigboss {
     display: flex;
-    justify-content:space-evenly
+    justify-content:space-evenly;
     width: 70%;
     margin-left: 6%;
     margin-right: 0%;
